@@ -1,5 +1,8 @@
 2004-10-05  Daniel Henninger  <jadestorm@nc.rr.com>
 
+	* src/lang.py:
+	Added Dutch language, fixed up locale defs for other languages.
+
 	* src/legacy/icqt.py:
 	* src/legacy/glue.py:
 	Handle away status more properly on login and such.
